# applied-llm

./: README.md
.devcontainer/: devcontainer.json
basics/: micrograd-pytorch.py  pyproject.toml
basics/alexnet/: .gitignore  alexnet.ipynb  notebook_alexnet.ipynb
xgen/: requirements.txt  test.ipynb
